--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "p-queue": "^9.0.0",
     "pino": "^9.6",
     "protobufjs": "^7.2.4",
-    "ws": "^8.13.0"
+    "ws": "^8.13.0",
+    "@adiwajshing/keyed-db": "^0.2.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
